# palmwtc

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
_sources/api/palmwtc/: index.rst
_sources/api/palmwtc/cli/: index.rst
_sources/api/palmwtc/config/: index.rst
_sources/api/palmwtc/data/: index.rst
_sources/api/palmwtc/flux/: index.rst
_sources/api/palmwtc/flux/absolute/: index.rst
_sources/api/palmwtc/flux/advanced_outlier/: index.rst
_sources/api/palmwtc/flux/chamber/: index.rst
_sources/api/palmwtc/flux/cycles/: index.rst
_sources/api/palmwtc/flux/scaling/: index.rst
_sources/api/palmwtc/hardware/: index.rst
_sources/api/palmwtc/hardware/gpu/: index.rst
_sources/api/palmwtc/io/: index.rst
_sources/api/palmwtc/io/cloud/: index.rst
_sources/api/palmwtc/io/loaders/: index.rst
_sources/api/palmwtc/io/paths/: index.rst
_sources/api/palmwtc/notebooks_runner/: index.rst
_sources/api/palmwtc/pipeline/: index.rst
_sources/api/palmwtc/qc/: index.rst
_sources/api/palmwtc/qc/breakpoints/: index.rst
_sources/api/palmwtc/qc/drift/: index.rst
_sources/api/palmwtc/qc/ml/: index.rst
_sources/api/palmwtc/qc/processor/: index.rst
_sources/api/palmwtc/validation/: index.rst
_sources/api/palmwtc/viz/: index.rst
_sources/api/palmwtc/windows/: index.rst
_sources/science/: index.md
_sources/tutorials/: 000_End_to_End_Synthetic.ipynb  020_QC_Rule_Based.ipynb  026_CO2_H2O_Segmented_Bias.ipynb  030_Flux_Cycle_Calculation.ipynb  033_Science_Validation.ipynb  index.md
api/palmwtc/: index.html
api/palmwtc/cli/: index.html
api/palmwtc/config/: index.html
api/palmwtc/data/: index.html
api/palmwtc/flux/: index.html
api/palmwtc/flux/absolute/: index.html
api/palmwtc/flux/advanced_outlier/: index.html
api/palmwtc/flux/chamber/: index.html
api/palmwtc/flux/cycles/: index.html
api/palmwtc/flux/scaling/: index.html
api/palmwtc/hardware/: index.html
api/palmwtc/hardware/gpu/: index.html
api/palmwtc/io/: index.html
api/palmwtc/io/cloud/: index.html
api/palmwtc/io/loaders/: index.html
api/palmwtc/io/paths/: index.html
api/palmwtc/notebooks_runner/: index.html
api/palmwtc/pipeline/: index.html
api/palmwtc/qc/: index.html
api/palmwtc/qc/breakpoints/: index.html
api/palmwtc/qc/drift/: index.html
api/palmwtc/qc/ml/: index.html
api/palmwtc/qc/processor/: index.html
api/palmwtc/qc/reporting/: index.html
api/palmwtc/qc/rules/: index.html
api/palmwtc/validation/: index.html
api/palmwtc/validation/science/: index.html
api/palmwtc/viz/: index.html
api/palmwtc/viz/diagnostics/: index.html
api/palmwtc/viz/interactive/: index.html
api/palmwtc/viz/qc_plots/: index.html
api/palmwtc/viz/style/: index.html
api/palmwtc/viz/timeseries/: index.html
api/palmwtc/windows/: index.html
api/palmwtc/windows/selector/: index.html
docs/: PROJECT_PULSE.md  _config.yml  _toc.yml  index.md  quickstart.md
docs/api/: index.md
docs/science/: index.md
docs/tutorials/: 000_Integrated_End_to_End.ipynb  001_End_to_End_LIBZ.ipynb  001_End_to_End_Real_Chamber_Data.ipynb  010_Data_Integration.ipynb  011_Weather_vs_Chamber.ipynb  020_QC_Rule_Based.ipynb  022_QC_ML_Enhanced.ipynb  023_Field_Alert_Report.ipynb  031_Window_Selection_Reference.ipynb  index.md
notebooks/: 000_Integrated_End_to_End.ipynb  001_End_to_End_Real_Chamber_Data.ipynb  022_QC_ML_Enhanced.ipynb  023_Field_Alert_Report.ipynb  025_Cross_Chamber_Bias.ipynb  032_Window_Selection_Production.ipynb  034_QC_and_Window_Audit.ipynb  035_QC_Threshold_Sensitivity.ipynb
science/: index.html
scripts/: build_000_synthetic_notebook.py  build_001_end_to_end_notebook.py  build_001_libz_notebook.py  build_integrated_tutorial.py  build_phase5_notebooks.py  build_tutorial_notebooks.py  make_sample_data.py
src/palmwtc/: __init__.py  cli.py  config.py  notebooks_runner.py  pipeline.py
src/palmwtc/dashboard/: __init__.py  app.py
src/palmwtc/data/: __init__.py
src/palmwtc/flux/: __init__.py  absolute.py  advanced_outlier.py  chamber.py  cycles.py  scaling.py
src/palmwtc/hardware/: __init__.py  gpu.py
src/palmwtc/io/: __init__.py  cloud.py  loaders.py  paths.py
src/palmwtc/qc/: __init__.py  breakpoints.py  drift.py  ml.py  processor.py  reporting.py  rules.py
src/palmwtc/qc/templates/: field_alert.html
src/palmwtc/validation/: __init__.py  science.py
src/palmwtc/viz/: __init__.py  diagnostics.py  interactive.py  qc_plots.py  style.py  timeseries.py
src/palmwtc/windows/: __init__.py  selector.py
tests/: conftest.py
tests/fixtures/: .gitkeep
tests/integration/: test_pipeline_skeleton.py  test_tutorial_notebooks.py
tests/unit/: test_cli.py  test_config.py  test_dashboard.py  test_pipeline.py  test_smoke.py
tests/unit/flux/: test_absolute.py  test_advanced_outlier.py  test_chamber.py  test_cycles.py  test_scaling.py
tests/unit/hardware/: test_gpu.py
tests/unit/io/: test_cloud.py  test_loaders.py  test_paths.py
tests/unit/qc/: test_breakpoints.py  test_drift.py  test_ml.py  test_processor.py  test_reporting.py  test_rules.py
tests/unit/validation/: test_science.py  test_science_parity.py
tests/unit/viz/: test_diagnostics.py  test_interactive.py  test_qc_plots.py  test_style.py  test_timeseries.py
tests/unit/windows/: test_selector.py
tutorials/: 000_End_to_End_Synthetic.html  001_End_to_End_LIBZ.html  010_Data_Integration.html  011_Weather_vs_Chamber.html  020_QC_Rule_Based.html  022_QC_ML_Enhanced.html  023_Field_Alert_Report.html  025_Cross_Chamber_Bias.html  026_CO2_H2O_Segmented_Bias.html  030_Flux_Cycle_Calculation.html  031_Window_Selection_Reference.html  032_Window_Selection_Production.html  033_Science_Validation.html  034_QC_and_Window_Audit.html  035_QC_Threshold_Sensitivity.html  index.html
(+16 files in other folders)
