[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "palmwtc"
version = "0.3.0"
description = "Automated whole-tree chamber workflow for oil-palm ecophysiology — QC, flux calculation, science validation."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Didi Adisaputro", email = "saputrozokovic@gmail.com" },
]
maintainers = [
    { name = "Didi Adisaputro", email = "saputrozokovic@gmail.com" },
]
keywords = [
    "ecophysiology",
    "flux-chamber",
    "whole-tree-chamber",
    "oil-palm",
    "co2-flux",
    "h2o-flux",
    "ecosystem-science",
    "li-cor-850",
    "digital-twin",
    "xpalm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.26,<3.0",
    "pandas>=2.1,<3.0",
    "scipy>=1.11,<2.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "plotly>=5.18,<7.0",
    "pyarrow>=15.0,<22.0",
    "ruptures>=1.1.9,<2.0",
    "joblib>=1.3,<2.0",
    "tqdm>=4.66,<5.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "jinja2>=3.1,<4.0",
    "typer>=0.12,<1.0",
    "pooch>=1.8,<2.0",
    "papermill>=2.6,<3.0",
    "nbformat>=5.10,<6.0",
    "nbconvert>=7.16,<8.0",
    "ipykernel>=6.29,<7.0",
    "openpyxl>=3.1,<4.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4,<2.0",
]
ml-merlion = [
    "salesforce-merlion>=2.0,<3.0",
]
gpu = [
    "torch>=2.2,<3.0",
]
interactive = [
    "ipywidgets>=8.1,<9.0",
    "anywidget>=0.9,<1.0",
]
docs = [
    "jupyter-book>=1.0,<2.0",
    "myst-nb>=1.1,<2.0",
    "sphinx-autoapi>=3.1,<4.0",
    "sphinx-copybutton>=0.5,<1.0",
]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<5.0",
    "nbstripout>=0.7,<1.0",
    "twine>=5.0,<7.0",
    "build>=1.2,<2.0",
    "types-PyYAML>=6.0",
]
all = [
    "palmwtc[ml,gpu,interactive,docs,dev]",
]

[project.scripts]
palmwtc = "palmwtc.cli:app"

[project.urls]
Homepage = "https://github.com/adisapoetro/palmwtc"
Documentation = "https://adisapoetro.github.io/palmwtc/"
Repository = "https://github.com/adisapoetro/palmwtc"
Issues = "https://github.com/adisapoetro/palmwtc/issues"
Changelog = "https://github.com/adisapoetro/palmwtc/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/palmwtc"]

[tool.hatch.build.targets.sdist]
include = [
    "src/palmwtc/**/*",
    "tests/**/*",
    "README.md",
    "LICENSE",
    "CITATION.cff",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "src/palmwtc/data/sample/real/*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs/_build", "notebooks/executed"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "B008",
    "N803",
    "N806",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803", "N806"]
"notebooks/**/*.ipynb" = ["E402", "F401"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src/palmwtc"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "src/palmwtc"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--doctest-modules",
    "--doctest-glob=*.md",
    "-o", "doctest_optionflags=NORMALIZE_WHITESPACE ELLIPSIS",
]
markers = [
    "slow: tests that take >5s",
    "integration: end-to-end pipeline tests",
    "requires_real_data: tests that need real LIBZ data, skipped in CI",
    "requires_gpu: tests that need [gpu] extra and a GPU/MPS device",
]

[tool.coverage.run]
source = ["src/palmwtc"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.palmwtc]
default_site = "libz"
